# koderpad

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  requirements.in  requirements.txt
.streamlit/: config.toml  secrets.toml.example
src/: main.py  utils.py
src/languages/docker/: executor.py  settings.py
src/languages/docker/exercises/: default.Dockerfile  ex01.Dockerfile
src/languages/python/: executor.py  settings.py  utils.py
src/languages/python/exercises/: ex01.py  ex02.py  ex03.py
src/languages/sql/: executor.py  settings.py
src/languages/sql/exercises/: ex01.sql  ex02.sql  ex03.sql  ex04.sql  ex05.sql  ex06.sql  ex07.sql
