[project]
name = "koderpad"
version = "0.1.0"
description = "An online Python and SQL database playground for testing codes."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "streamlit-code-editor>=0.1.22",
]

[dependency-groups]
dev = []
